--- a/main.style.css
+++ b/main.style.css
@@ -1,6 +1,6 @@
 body {
-	font-family: 'Arial', sans-serif;
-	zoom: 160%;
+	font-family: 'Roboto', sans-serif;
+	zoom: 150%;
 	background-color: #2E3440;
 	color: #D7DDE8;
 }
